# digdag-viz

./: .digdag-graph.yml  .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  action.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: visualize-workflows.yml
docs/: configuration.md  github-actions.md
example/: README.md  adhoc_analysis.dig  daily_processing.dig  etl_pipeline.dig  hourly_sync.dig
example/queries/: consolidate.sql  create_user_activity.sql  extract.sql  extract_events.sql  extract_users.sql  prepare_analysis.sql  stage_events.sql  stage_users.sql  sync_clickstream.sql  transform.sql  update_staging_clickstream.sql
src/digdaggraph/: __init__.py  cli.py  config.py  exceptions.py  graph.py  lineage.py  logger.py  parser.py  sql_pages.py  templates.py
